--- a/server/package.json
+++ b/server/package.json
@@ -13,15 +13,21 @@
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "^4.16.4",
+    "express-oauth-server": "^2.0.0",
     "express-session": "^1.17.1",
     "http-errors": "~1.6.3",
-    "jade": "~1.11.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.6",
     "morgan": "~1.9.1",
+    "oauth2orize": "^1.11.0",
     "passport": "^0.4.1",
+    "passport-http-bearer": "^1.0.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^6.0.1"
+    "passport-local-mongoose": "^6.0.1",
+    "passport-oauth2": "^1.5.0",
+    "passport-oauth2-client-password": "^0.1.2",
+    "pug": "^3.0.0",
+    "uuid": "^8.3.0"
   }
 }
