--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@
 .env.development.local
 .env.test.local
 .env.production.local
+*.env
 
 npm-debug.log*
 yarn-debug.log*
@@ -46,6 +47,10 @@ package-lock.json
 *.log
 *.gz
 
+# firebase
+.firebaserc
+firebase.json
+service-account-file.json
 
 # Coveralls
 coverage
