--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.5.2",
     "crypto-js": "^4.0.0",
+    "firebase": "^7.21.0",
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
     "react": "^16.13.1",
