--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,8 @@
     "express": "^4.16.4",
     "express-oauth-server": "^2.0.0",
     "express-session": "^1.17.1",
+    "firebase": "^7.21.0",
+    "firebase-admin": "^9.2.0",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.6",
