--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "^4.16.4",
+    "express-bearer-token": "^2.4.0",
     "express-oauth-server": "^2.0.0",
     "express-session": "^1.17.1",
     "firebase": "^7.21.0",
