signup and login now works

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 PORT=8000
-GOOGLE_APPLICATION_CREDENTIALS=C:\Users\tearb\Code\ankiboards\ankiboards\server\service-account-file.json
+GOOGLE_APPLICATION_CREDENTIALS="C:\Users\tearb\Code\ankiboards\ankiboards\server\service-account.json"
+FIREBASE_CONFIG="C:\Users\tearb\Code\ankiboards\ankiboards\firebase-config.json"
+DEBUG=express:*
