--- a/.gitignore
+++ b/.gitignore
@@ -13,11 +13,12 @@
 
 # misc
 .DS_Store
+.env
+.env.*
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
-.env
 
 npm-debug.log*
 yarn-debug.log*
@@ -25,6 +26,7 @@ yarn-error.log*
 
 
 # server files
+config.json
 
 # OS X
 .DS_Store*
