--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,6 @@
   },
   "dependencies": {
     "bcrypt": "^5.0.0",
-    "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
@@ -17,11 +16,9 @@
     "firebase": "^7.21.0",
     "firebase-admin": "^9.2.0",
     "http-errors": "~1.6.3",
-    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.2",
     "mongoose": "^5.10.6",
     "morgan": "~1.9.1",
-    "pug": "^3.0.0",
-    "uuid": "^8.3.0"
+    "pug": "^3.0.0"
   }
 }
