--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,10 +21,10 @@
     "react-scripts": "3.4.3"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "env-cmd -f .env.development react-scripts start && ../server/bin/www &",
     "build": "react-scripts build",
     "build:dev": "env-cmd -f .env.development npm run build",
-    "deploy": "react-scripts build && firebase deploy",
+    "deploy": "env-cmd -f .env.production react-scripts build && firebase deploy",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
