--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.16.4",
     "express-bearer-token": "^2.4.0",
+    "express-oauth-server": "^2.0.0",
     "firebase": "^7.21.0",
     "firebase-admin": "^9.2.0",
     "http-errors": "~1.6.3",
