--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "firebase-admin": "^9.2.0",
     "forever": "^3.0.2",
     "http-errors": "~1.6.3",
+    "moment": "^2.29.0",
     "mongodb": "^3.6.2",
     "mongoose": "^5.10.6",
     "morgan": "~1.9.1",
