--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,18 +7,21 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.5.2",
+    "colormap": "^2.3.1",
     "crypto-js": "^4.0.0",
     "env-cmd": "^10.1.0",
     "firebase": "^7.21.0",
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
     "react": "^16.13.1",
-    "react-autosuggest": "^10.0.2",
     "react-bootstrap": "^1.3.0",
+    "react-bootstrap-typeahead": "^5.1.1",
     "react-dom": "^16.13.1",
+    "react-editext": "^3.17.1",
+    "react-feather": "^2.0.8",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "^3.4.3"
   },
   "scripts": {
     "start": "env-cmd -f .env.development react-scripts start && ../server/bin/www &",
