--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "firebase": "^7.21.0",
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-bootstrap-typeahead": "^5.1.1",
