--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3",
+    "react-tooltip": "^4.2.10",
     "recharts": "^1.8.5",
     "victory": "^35.1.1"
   },
